# audiobook_tool

./: audiobook_tool.py  pyproject.toml  requirements.txt
audiobook_tool/: __init__.py  audiobook_tool_lib.py
