[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook_tool"
version = "0.1.0"
description = "A tool for processing audiobook files."
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "requests==2.32.3",
    "urllib3==2.3.0"
]

[tool.setuptools.packages.find]
include = ["audiobook_tool*"]